<resources>
    <string name="app_name">Cosmo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvSongArtistNullTag">TextView</string>
    <string name="tvSongTitleNullTag">song_name</string>
    <string name="album_name">album_name</string>
    <string name="albumart">albumart</string>
    <string name="searchmenutext">Search</string>
    <string name="album_title">album_title</string>
    <string name="album_artist">album_artist</string>
    <string name="search_hint">Search &#8230;</string>
    <string name="discog_template">x Songs | y Albums</string>
    <string name="artist_name_null">artist_name</string>
    <string name="transition_search_back" translatable="false">transition_search_back</string>
    <string name="path_search">M13.3843083,13.3956843 C11.233862,15.5399983 7.7581039,15.5381046 5.61000013,13.3900003 C3.46000004,11.2399998 3.46000004,7.76000023 5.61000013,5.61000013 C7.76000023,3.46000004 11.2400007,3.46000004 13.3900003,5.61000013 C15.54,7.76000023 15.5400009,11.2400007 13.3900003,13.3900003 C13.388104,13.3918967 13.3862067,13.3937913 13.3843083,13.3956843 C15.1427975,15.1834093 19.6826174,19.798706 19.6826172,19.7987061 L13.3843085,13.3956846 L13.3843083,13.3956843 Z</string>
    <string name="no_search_results">No results for\n“%1$s”</string>

    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results_str">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="transition_album_bg">transition_album_bg</string>
    <string name="transition_album_art">transition_album_art</string>
    <string name="player_bg">player_bg</string>
    <string name="player_art">player_art</string>
    <string name="player_song">player_song</string>
    <string name="player_artist">player_artist</string>
    <string name="settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="repeat">Repeat</string>
    <string name="transition_player">transition_player</string>
    <string name="title_activity_cosmo">CosmoActivity</string>
    <string name="title_songs">Songs</string>
    <string name="title_albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
</resources>
