<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="2dp"
    android:layout_weight="0.3">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/cvAlbum">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ivAlbumArt"
                android:src="@drawable/nav_bg"
                android:contentDescription="@string/albumart"/>
            <TextView
                android:text="@string/album_name"
                android:layout_width="match_parent"
                android:textSize="19sp"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:id="@+id/tvAlbumCardTitle"
                android:layout_below="@+id/ivAlbumArt"/>

            <TextView
                android:text="@string/tvSongArtistNullTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAlbumCardArtist"
                android:layout_below="@id/tvAlbumCardTitle"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>