<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:transitionName="@string/transition_player">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_str"
        android:scaleType="centerCrop"
        android:transitionName="@string/player_art" />

    <android.support.v7.widget.CardView
        android:id="@+id/controllers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:elevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/startText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="xx:yy"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/endText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="xx:yy"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/prev"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_prev"
                    android:src="@drawable/ic_skip_previous_white_48dp" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/play_pause"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:src="@drawable/ic_play_arrow_24dp"
                    app:rippleColor="@color/background_light" />

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_next"
                    android:src="@drawable/ic_skip_next_white_48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/lineSong"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="20"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/fullscreen_line_color"
                    android:transitionName="@string/player_song" />

                <TextView
                    android:id="@+id/lineArtist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="20"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/fullscreen_secondary_line_color"
                    android:transitionName="@string/player_artist" />

                <TextView
                    android:id="@+id/lineAlbum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="20"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/fullscreen_secondary_line_color" />

                <TextView
                    android:id="@+id/line3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="20"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/fullscreen_secondary_line_color"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top|start"
        android:layout_marginTop="24dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

</FrameLayout>