<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#424242"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <ImageView
            android:id="@+id/ivAlbumArt"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_album_art"
            app:layout_collapseMode="parallax"
            tools:src="#33b5e5" />

        <LinearLayout
            android:id="@+id/albumText"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="bottom"
            android:background="#424242"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="8dp"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:transitionName="@string/transition_album_bg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/line_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="16dp"
                        android:lines="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Tool" />

                    <TextView
                        android:id="@+id/line_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:textSize="16sp"
                        tools:text="Lateralus" />


                </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAlbumSongs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="356dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/album_song_card" />

</FrameLayout>